# llvm-kaleidoscope

./: .gitignore  CMakeLists.txt  Makefile  README.md
docker/: Dockerfile
